app/assets/stylesheets/homepage.scss
div.container.pages.index {

  div#upcoming-productions {
    border: 1px solid #aaa;
    padding: 0px;
    margin: 0px;
    h3 {
      border-bottom: 1px solid #aaa;
      margin: 0px;
      padding: 10px 20px;
    }
    div.productions {
      height: 282px;
      overflow: scroll;
      div.production {
        border-bottom: 1px solid #aaa;
        padding: 10px;        
      }
    }
    div.footer {
      background-color: #ccc;
      border-top: 1px solid #aaa;
      text-align: right;
      padding: 10px;
    }
  }
  
}

